--- a/application.yaml
+++ b/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: animal-website
+  name: farm-website
   namespace: argocd
 spec:
   project: default
