--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: animal-website
+  name: farm-website
   labels:
-    app: animal-website
+    app: farm-website
     type: farm  
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: animal-website
+      app: farm-website
   template:
     metadata:
       labels:
-        app: animal-website
+        app: farm-website
     spec:
       containers:
       - name: nginx
