--- a/pvc.yaml
+++ b/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: animal-images-pvc
+  name: farm-images-pvc
 spec:
   accessModes:
     - ReadWriteOnce
