--- a/website-config.yaml
+++ b/website-config.yaml
@@ -60,17 +60,17 @@ data:
       <h1>Farm Animals Gallery</h1>
       <div class="animals">
         <div class="animal-card">
-          <img src="/images/cow.jpg" alt="Cow">
+          <img src="cow.jpg" alt="Cow">
           <h2>Cow</h2>
           <p>Domesticated animal that provides milk and meat. Known for their gentle nature and important role in agriculture.</p>
         </div>
         <div class="animal-card">
-          <img src="/images/chicken.jpeg" alt="Chicken">
+          <img src="chicken.jpeg" alt="Chicken">
           <h2>Chicken</h2>
           <p>Common farm bird that provides eggs and meat. They're social animals with complex hierarchical structures.</p>
         </div>
         <div class="animal-card">
-          <img src="/images/horse.jpg" alt="Horse">
+          <img src="horse.jpg" alt="Horse">
           <h2>Horse</h2>
           <p>Raised for wool, milk, and meat. Sheep are gentle herbivores with impressive memory for faces.</p>
         </div>
