--- a/deployment.yaml
+++ b/deployment.yaml
@@ -22,10 +22,10 @@ spec:
         - containerPort: 80
         volumeMounts:
         - name: website-html
-          mountPath: /usr/share/nginx/html/index.html
+          mountPath: /usr/share/nginx/html/
           subPath: index.html
         - name: images-volume
-          mountPath: /usr/share/nginx/html/images/
+          mountPath: /usr/share/nginx/html/images
       volumes:
       - name: website-html
         configMap:
