--- a/wildlife-website-config.yaml
+++ b/wildlife-website-config.yaml
@@ -4,7 +4,7 @@ metadata:
   name: website-html
   labels:
     app: img-website
-    type: farm  
+    type: wild  
 data:
   index.html: |
     <!DOCTYPE html>
