--- a/deployment.yaml
+++ b/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: img-website
   labels:
     app: img-website
-    type: farm  
+    type: wild  
 spec:
   replicas: 2
   selector:
@@ -25,7 +25,7 @@ spec:
           mountPath: /usr/share/nginx/html/index.html
           subPath: index.html
         - name: images-volume
-          mountPath: /usr/share/nginx/html/images
+          mountPath: /usr/share/nginx/html/images/
       volumes:
       - name: website-html
         configMap:
