--- a/deployment.yaml
+++ b/deployment.yaml
@@ -22,7 +22,7 @@ spec:
         - containerPort: 80
         volumeMounts:
         - name: website-html
-          mountPath: /usr/share/nginx/html
+          mountPath: /usr/share/nginx/html/index.html
           subPath: index.html
         - name: images-volume
           mountPath: /usr/share/nginx/html/images/
