--- a/wildlife-website-config.yaml
+++ b/wildlife-website-config.yaml
@@ -4,7 +4,7 @@ metadata:
   name: website-html
   labels:
     app: img-website
-    type: wild  
+    type: farm  
 data:
   index.html: |
     <!DOCTYPE html>
@@ -63,6 +63,21 @@ data:
           <img src="/images/tiger.jpg" alt="Tiger">
           <h2>Tiger</h2>  <!-- Changed from Cow to Tiger -->
           <p>Powerful carnivore and the largest cat species. Known for their distinctive orange coat with black stripes.</p>
+        </div>
+        <div class="animal-card">
+          <img src="/images/cow.jpg" alt="Cow">
+          <h2>Cow</h2>
+          <p>Domesticated animal that provides milk and meat. Known for their gentle nature and important role in agriculture.</p>
+        </div>
+        <div class="animal-card">
+          <img src="/images/chicken.jpeg" alt="Chicken">
+          <h2>Chicken</h2>
+          <p>Common farm bird that provides eggs and meat. They're social animals with complex hierarchical structures.</p>
+        </div>
+        <div class="animal-card">
+          <img src="/images/horse.jpg" alt="Horse">
+          <h2>Horse</h2>
+          <p>Raised for wool, milk, and meat. Sheep are gentle herbivores with impressive memory for faces.</p>
         </div>
       </div>
     </body>
